# FastAPI-Dunossauro

./: pyproject.toml
fastapi_dunossauro/: app.py
tests/: test_app.py
