[tool.poetry]
name = "fastapi-dunossauro"
version = "0.1.0"
description = ""
authors = ["Gabriel Santos <hiroowtfoficial@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F','E','W','PL','PT']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev fastapi_dunossauro/app.py'

pre_test = 'task lint'
test = 'pytest --cov=fastapi_dunossauro -vv'
post_test = 'coverage html'

lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

